Fixed vertical alignment bug on question page

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_question.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_question.scss
@@ -92,7 +92,7 @@
 
       h1 {
         align-self: center;
-        margin: 0;
+        margin: auto 0;
       }
 
       .govuk-error-message {
